--- a/index.qmd
+++ b/index.qmd
@@ -1,40 +1,52 @@
 ---
-about:
-  template: jolla
-  id: about-block
-  image: "img/my_image.jpg"
-  links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com/MarvinSchmittML
-    - icon: github
-      text: Github
-      href: https://github.com/marvinschmitt
-    - icon: linkedin
-      text: LinkedIn
-      href: https://www.linkedin.com/in/marvin-schmitt-a85b321a2/
-    - icon: envelope
-      text: Email
-      href: "mailto:mail.marvinschmitt@gmail.com"  
+  title: Leonardo Calzada
+  about:
+    template: trestles
+    image: "img/my_image.jpg"
+    links:
+      - icon: twitter
+        text: Twitter
+        href: https://twitter.com/le_calzada
+      - icon: github
+        text: Github
+        href: https://github.com/leocalzada
+      - icon: instagram
+        text: Instagram
+        href: https://www.instagram.com/lecalzada/
+      - text: "{{< ai google-scholar >}} Google Scholar"
+        href: https://scholar.google.com/citations?user=voVedNAAAAAJ&hl=en
+      - text: "{{< ai researchgate >}} ResearchGate"
+        href: https://www.researchgate.net/profile/Leonardo-Calzada
+      - icon: linkedin
+        text: LinkedIn
+        href: https://www.linkedin.com/in/leonardocalzada/
+      - text: "{{< ai orcid >}} ORCID"
+        href: https://orcid.org/0000-0003-1071-8430
+      - icon: envelope
+        text: Email
+        href: "mailto:leonardo.calzada@rutgers.edu"  
 ---
 
-::: {#about-block}
-:::
+Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending time unicycling and playing with her pet iguana.
 
-# Welcome to my website!
+## Education
 
-I am Gandalf the White, a renowned wizard and scholar of Middle-earth. Over the centuries, I have dedicated my life to studying the history, languages, and cultures of the peoples of Middle-earth. On this website, I offer a glimpse into my vast body of knowledge, ongoing research, and publications.
+Rutgers University, San Diego | New Jersey, USA
+PhD in Geography | 2020 - Present
 
-My research interests span the entirety of Middle-earth, from the distant past to the present day. I am particularly passionate about the languages and mythologies of the Elves, Dwarves, and Men, and I have made significant contributions to the understanding of these subjects. My studies of the natural world have also been extensive, and I am an expert in the flora and fauna of Middle-earth. Additionally, I have been involved in many important historical events and offer valuable first-hand accounts and insights on the past.
+National Autonomous University of Mexico | Mexico City, Mexico <br>
+MS -- Biological Sciences| 2017 - 2019 <br>
+BS -- Biology | 2011 - 2015
 
-Not only am I a scholar, but I am also a mentor and teacher. Over the centuries, I have had the honor of working with many young wizards, passing on my knowledge and experience to the next generation. I have a particular interest in the education of hobbits, whom I see as having great potential despite their small size and simple lifestyle. My teaching style is engaging and accessible, and I encourage my students to think critically and creatively.
+## Experience
 
-On this website, you will find a selection of my published works, including scholarly articles, monographs, and translations. You will also find news and updates on my current research projects, as well as information on upcoming events and conferences where I will be speaking. I invite you to explore my website and learn more about my life's work as one of Middle-earth's greatest scholars and thinkers.
-Please feel free to [contact me](mailto:mail.marvinschmitt@gmail.com) if you have any questions or would like to discuss potential projects.
+Wengo Analytics | Head Data Scientist | April 2018 - present
+
+GeoScynce | Chief Analyst | Sept 2012 - April 2018
 
 ```{=html}
 <div  style="margin: 30px; text-align: center;">
-<a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
+<a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">Check projects</a>
 </div>
 ```
 
