--- a/pubs/references.bib
+++ b/pubs/references.bib
@@ -88,6 +88,7 @@
                teóricas y su aplicación en contextos latinoamericanos",
   author    = "Ortega Uribe, T and Mastrangelo, M E and Villarroel Torrez, D and
                {others}",
+  journal   = "Investigación Ambiental, Ciencia y política pública",
   publisher = "ri.conicet.gov.ar",
   abstract  = "Debido a limitaciones para abordar la complejidad de la relación
                sociedad-naturaleza, los esfuerzos para solucionar los problemas
